# AS_Challange

./: .gitignore  README.md  readme.md  requirements.sh  sem_img_proc_node.cpp  start.sh
challange/code/: frames.gv
challange/code/src/astar_path_planner/: CMakeLists.txt  package.xml
challange/code/src/astar_path_planner/launch/: path_planner.launch
challange/code/src/astar_path_planner/src/: Frontier_Detecter.cpp  Multi_Frotier_Detecter.cpp  path_planner.cpp
challange/code/src/controller_manual/: CMakeLists.txt
challange/code/src/controller_manual/src/: keyboard_input_publisher.cpp  manual_control_node.cpp
challange/code/src/controller_pkg/: CMakeLists.txt  README.md  package.xml
challange/code/src/controller_pkg/config/: controller_params.yaml
challange/code/src/controller_pkg/launch/: controller.launch
challange/code/src/controller_pkg/src/: README.md  controller_node.cpp  convert_unit_node.cpp  keyboard_node.cpp  traj_pub_node.cpp  traj_publisher.cpp
challange/code/src/image_converter_node/: CMakeLists.txt  README.md
challange/code/src/image_converter_node/src/: sem_img_proc_node.cpp
challange/code/src/manully_controller/: CMakeLists.txt  package.xml
challange/code/src/perception_pkg/: CMakeLists.txt  package.xml
challange/code/src/perception_pkg/launch/: octomap.launch  pointcloud.launch
challange/code/src/simulation/: README.md
challange/code/src/simulation/cfg/: config.rviz
challange/code/src/simulation/launch/: percep_pipeline.launch  percep_pipeline_backupp.launch  simulation.launch
challange/code/src/simulation/rviz_config/: config1.rviz
challange/code/src/simulation/src/: w_to_unity.cpp
challange/code/src/trajectory_pkg/: CMakeLists.txt  package.xml
challange/code/src/trajectory_pkg/cfg/: traj_config.yaml
challange/code/src/trajectory_pkg/include/: example_planner.h
challange/code/src/trajectory_pkg/launch/: traj_gen.launch
challange/code/src/trajectory_pkg/src/: example_planner.cc  example_planner_node.cc
document/: AutonomousSystems2024.aux  AutonomousSystems2024.bbl  AutonomousSystems2024.blg  AutonomousSystems2024.fdb_latexmk  AutonomousSystems2024.fls  AutonomousSystems2024.out  AutonomousSystems2024.tex  references.bib
image_converter_node/: CMakeLists.txt  package.xml
path_planner_pkg/: CMakeLists.txt  package.xml
path_planner_pkg/launch/: path_planner.launch
path_planner_pkg/src/: Frontier_Detecter.cpp  path_planner.cpp
