<?xml version="1.0"?>
<package>
  <name>path_planner_pkg</name>
  <version>0.0.0</version>
  <description>The UAV controller package</description>
  <maintainer email="antonap@mit.edu">Pasquale Antonante</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <!-- <build_depend>sensor_msgs</build_depend> -->
  <!-- <build_depend>pcl_conversions</build_depend>
  <build_depend> pcl_ros</build_depend> -->

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <!-- <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend> pcl_ros</run_depend> -->

  <!-- Add dependencies for OMPL and FCL -->
  <build_depend>ompl</build_depend>
  <build_depend>fcl</build_depend>
  <run_depend>ompl</run_depend>
  <run_depend>fcl</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>